--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,11 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "page_action": {
+  "content_scripts": [{
+    "matches": ["http://*/*", "https://*/*"],
+    "js": ["js/detection.js"]
+  }],
+  "browser_action": {
     "default_popup": "recordPopup.html",
     "default_icon": {
       "16": "images/get_started16.png",
