--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,27 +4,19 @@
   "description": "Used to detect body position",
   "permissions": ["storage", "declarativeContent", "activeTab"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "scripts": ["background.bundle.js"]
   },
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
-    "js": ["js/detection.js"]
+    "js": ["detection.bundle.js"]
   }],
   "browser_action": {
     "default_popup": "recordPopup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
     }
   },
   "icons":{
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
